[Bugfix] hide x overflow for small screen resolutions

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ div {
   align-items: center;
   justify-content: center;
   flex: 1;
+  overflow-x: hidden;
 }
 
 .middle-container {
